[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmconveyors"
version = "0.1.0"
description = "Python SDK for the LLM Conveyors AI Agent Platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LLM Conveyors Contributors" },
]
keywords = ["llm", "ai", "agents", "conveyors", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "mypy>=1.13",
    "build>=1.2",
    "twine>=6",
]

[project.urls]
Homepage = "https://llmconveyors.com"
Documentation = "https://llmconveyors.com/docs"
Repository = "https://github.com/llmconveyors/python-sdk"
Issues = "https://github.com/llmconveyors/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llmconveyors"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
